# aesthetic-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
cv_analyzer/: __init__.py  __main__.py  _json_utils.py  _utils.py  ai_fills_schema.py  analyze.py  build_library.py  classify.py  cli.py  color.py  components.py  composition.py  lighting.py  pipeline.py  spacing.py  test_analyze.py  test_color.py  test_components.py  test_composition.py  test_lighting.py  test_spacing.py  test_texture.py  texture.py  write_raw.py
scripts/: install_deps.sh
