[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aesthetic-lens"
version = "1.2.0"
description = "CV + AI image aesthetic analysis — extract design principles from reference images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.9.0",
    "numpy>=1.24.0",
    "scikit-image>=0.22.0",
    "colorthief>=0.2.1",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/aesthetic-lens"

[tool.setuptools.packages.find]
include = ["cv_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["cv_analyzer"]
